# WorkspaceIniter

./: Cargo.toml  License  README.md  makefile
mkwsconfig/: Cargo.toml
mkwsconfig/src/: main.rs
paths/: Cargo.toml
paths/src/: lib.rs
profile/: Cargo.toml
profile/src/: lib.rs
settings/: Cargo.toml
settings/src/: lib.rs
wsinit/: Cargo.toml
wsinit/src/: main.rs
