[package]
name = "profile"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.196", features = ["derive"] }

paths = {path = "../paths/"}
