[package]
name = "wsinit"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }

profile = {path = "../profile/"}
paths = {path = "../paths/"}
settings = {path = "../settings/"}
